# CUMP

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  cump-impl.h  cump.h  memory.c
cumpf/: Makefile.am  _ainit.cu  _set.cpp  aclear.c  ainit.c  ainit2.c  aiset_mpf.c  aset.c  aset_mpf.c  clear.c  get_dfl_prec.c  init.c  init2.c  iset.c  iset_mpf.c  set.c  set_dfl_prec.c  set_mpf.c
demos/: Makefile.am  axpy.cu
include/: Makefile.am
include/cump/: cump.cuh  def.h  longlong.cuh  pointer_traits.hpp  strideptr.cuh  utility.cuh
include/cump/mpf/: add.impl  clear.impl  init.impl  init2.impl  iset.impl  mul.impl  neg.impl  set.impl  sub.impl
include/cump/mpn/CUDA/: addmul.impl  mul_2.impl  mul_basecase.impl
include/cump/mpn/generic/: add.impl  add_1.impl  add_n.impl  addmul_1.impl  cmp.impl  copyd.impl  copyi.impl  lshift.impl  lshiftc.impl  mul.impl  mul_1.impl  mul_basecase.impl  neg.impl  rshift.impl  sub.impl  sub_1.impl  sub_n.impl
mpf/: Makefile.am  aset_cumpf.c  set_cumpf.c
