## Process this file with automake to generate Makefile.in


# Copyright 2012 Takatoshi Nakayama.
#
# This file is part of the CUMP Library.
#
# The CUMP Library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# The CUMP Library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with the CUMP Library.  If not, see http://www.gnu.org/licenses/.

nobase_include_HEADERS = \
  cump/pointer_traits.hpp cump/cump.cuh cump/longlong.cuh \
  cump/def.h cump/strideptr.cuh cump/utility.cuh \
  cump/mpf/add.impl cump/mpf/sub.impl cump/mpf/mul.impl \
  cump/mpf/init.impl cump/mpf/init2.impl cump/mpf/clear.impl \
  cump/mpf/set.impl cump/mpf/iset.impl cump/mpf/neg.impl \
  cump/mpn/generic/rshift.impl cump/mpn/generic/lshift.impl cump/mpn/generic/lshiftc.impl \
  cump/mpn/generic/add.impl cump/mpn/generic/add_1.impl cump/mpn/generic/add_n.impl \
  cump/mpn/generic/sub.impl cump/mpn/generic/sub_1.impl cump/mpn/generic/sub_n.impl \
  cump/mpn/generic/addmul_1.impl cump/mpn/generic/mul_basecase.impl \
  cump/mpn/generic/mul.impl cump/mpn/generic/mul_1.impl \
  cump/mpn/generic/copyd.impl cump/mpn/generic/copyi.impl \
  cump/mpn/generic/neg.impl cump/mpn/generic/cmp.impl \
  cump/mpn/CUDA/addmul.impl cump/mpn/CUDA/mul_2.impl cump/mpn/CUDA/mul_basecase.impl
